# langm

./: .cirrus.yml  .gitignore  Cargo.toml  RELEASE.md  go.mod  main.go  package.json  tsconfig.json
.github/workflows/: docs.yml  release.yml
.kiro/specs/langm/: design.md  requirements.md  tasks.md
cmd/: add.go  list.go  root.go  use.go
docs/: index.md  package.json
docs/guide/: add-runtime.md  capabilities.md  getting-started.md  installation.md  switch-runtime.md
installer/: README.md  build.bat  langm.iss
internal/config/: config.go
internal/detector/: detector.go
internal/symlink/: symlink.go
rust-src/: config.rs  detector.rs  main.rs  symlink.rs
scoop/: langm.json
scripts/: build-all-platforms.sh  build-release.ps1  install.sh  release.ps1
src/: index.ts  types.ts
src/commands/: add.ts  list.ts  use.ts
src/services/: config-manager.ts  runtime-detector.ts  symlink-manager.ts
wix/: main.wxs
